--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -193,7 +193,9 @@
                                   "(?=^.{7,20}$)(?=.*\\d)(?=.*[a-zA-Z])(?!.*\\s)[0-9a-zA-Z*$-+?_&=!%{}/'.]*$"
                                   ] }                         
    ],
-   "BugLogAreaPath":"Root",
-   "BugLogIterationPath":"Root",
-   "ResolvedBugLogBehaviour":"Update Existing"
+   "BugLogging":{
+   "BugLogAreaPath":"RootDefaultProject",
+   "BugLogIterationPath":"RootDefaultProject",
+   "ResolvedBugLogBehaviour":"ReactiveOldBug"
+   }
 }
