Code changes for service PublicIpAddresses

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -548,6 +548,9 @@
       "RequiredImageTag": "latest"
     }
   },
+  "PublicIpAddresses": {
+    "EnablePublicIpResource": "false"
+   },
   "MaxResourceInventoryObjectsCount": 20000,
   "AlernateAccountRegularExpressionForOrg": ""
 }
