--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -548,7 +548,7 @@
       "RequiredImageTag": "latest"
     }
   },
-  "PublicIpAddresses": {
+  "PublicIpAddress": {
     "EnablePublicIpResource": "false"
    },
   "MaxResourceInventoryObjectsCount": 20000,
