--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -155,7 +155,8 @@
     "WhitelistedExtensionPublishers":[
       "Microsoft",
       "Microsoft DevLabs"
-    ]
+    ],
+    "MaxPCAMembersPermissible":10
   },
   "ServiceConnection":{
     "WhitelistedGroupIdentities": [
