additional comments and other code changes

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -196,8 +196,9 @@
                                   ] }                         
    ],
    "BugLogging":{
-   "BugLogAreaPath":"RootDefaultProject",
-   "BugLogIterationPath":"RootDefaultProject",
-   "ResolvedBugLogBehaviour":"ReactiveOldBug"
+    "BugLogAreaPath":"RootDefaultProject",
+    "BugLogIterationPath":"RootDefaultProject",
+    "ResolvedBugLogBehaviour":"ReactiveOldBug",
+    "MaxKeyWordsToQueryForBugClose":100
    }
 }
