auto close for org and proj

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -199,6 +199,8 @@
     "BugLogAreaPath":"RootDefaultProject",
     "BugLogIterationPath":"RootDefaultProject",
     "ResolvedBugLogBehaviour":"ReactiveOldBug",
-    "MaxKeyWordsToQueryForBugClose":100
+    "MaxKeyWordsToQueryForBugClose":100,
+    "AutoCloseProjectBug":false,
+    "AutoCloseOrgBug":false
    }
 }
