pca/pa controls

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -11,14 +11,16 @@
           "AzureDevOps_Organization_SI_Review_Shared_Extensions",
           "AzureDevOps_Organization_AuthZ_Review_Extension_Managers",
           "AzureDevOps_Organization_AuthZ_Review_Project_Collection_Service_Accounts",
-          "AzureDevOps_Organization_SI_Review_Auto_Injected_Extensions"
+          "AzureDevOps_Organization_SI_Review_Auto_Injected_Extensions",
+          "AzureDevOps_Organization_AuthZ_Limit_Job_Authorization_Scope_To_Current_Project",
+          "AzureDevOps_Organization_DP_Dont_Allow_Public_Projects"
         ]
      },
      {
       "ResourceType": "Project",
       "ControlIds": [
         "AzureDevOps_Project_AuthZ_Set_Visibility_Private_Or_Enterprise",
-        "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Current_Project"
+        "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Current_Project"        
       ]
      },
      {
@@ -156,7 +158,12 @@
       "Microsoft",
       "Microsoft DevLabs"
     ],
-    "MaxPCAMembersPermissible":10
+    "MaxPCAMembersPermissible":5,
+    "MinPCAMembersPermissible":2
+  },
+  "Project":{
+    "MaxPAMembersPermissible":5,
+    "MinPAMembersPermissible":2
   },
   "ServiceConnection":{
     "WhitelistedGroupIdentities": [
