--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
@@ -121,6 +121,40 @@
         "DP"
       ],
       "Enabled": true
+    },
+    {
+      "ControlID": "AzureDevOps_Project_AuthZ_Min_Admin_Count",
+      "Description": "There should be atleast $($this.ControlSettings.Project.MinPAMembersPermissible) Project Administrators in your project.",
+      "Id": "Project180",
+      "ControlSeverity": "Medium",
+      "Automated": "No",
+      "MethodName": "CheckMinPACount",
+      "Rationale": "Having the minimum required number of administrators reduces the risk of losing admin access. This is useful in case of breakglass account scenarios.",
+      "Recommendation": "Go to Project settings --> General --> Permissions --> Groups --> Select the group : Project Administrators --> Review the members of this group",
+      "Tags": [
+        "SDL",
+        "AuthZ",
+        "Automated",
+        "Best Practice"
+      ],
+      "Enabled": true
+    },
+    {
+      "ControlID": "AzureDevOps_Project_AuthZ_Limit_Admin_Count",
+      "Description": "Minimize the number of Project Administrators",
+      "Id": "Project190",
+      "ControlSeverity": "Medium",
+      "Automated": "No",
+      "MethodName": "CheckMaxPACount",
+      "Rationale": "Each additional person in the administrator role increases the attack surface for the entire project. The number of members in these roles should be kept to as low as possible.",
+      "Recommendation": "Go to Project settings --> General --> Permissions --> Groups --> Select the group : Project Administrators --> Review the members of this group",
+      "Tags": [
+        "SDL",
+        "AuthZ",
+        "Automated",
+        "Best Practice"
+      ],
+      "Enabled": true
     }
   ]
 }
