--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -549,7 +549,7 @@
     }
   },
   "PublicIpAddress": {
-    "EnablePublicIpResource": "false"
+    "EnablePublicIpResource": false
    },
   "MaxResourceInventoryObjectsCount": 20000,
   "AlernateAccountRegularExpressionForOrg": ""
