Performance improvment + Usage telemetry updation

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -552,5 +552,6 @@
     "EnablePublicIpResource": false
    },
   "MaxResourceInventoryObjectsCount": 20000,
-  "AlernateAccountRegularExpressionForOrg": ""
+  "AlernateAccountRegularExpressionForOrg": "",
+  "GenerateSecurityEvaluationJsonFile": false
 }
