--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
@@ -89,14 +89,31 @@
       "Enabled": true
     },
     {
-      "ControlID": "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Current_Project",
-      "Description": "Do not run pipelines using tokens that have project collection level access.",
+      "ControlID": "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Current_Project_Non_Release_Pipeline",
+      "Description": "Do not run non-release pipelines using tokens that have project collection level access.",
       "Id": "Project160",
       "ControlSeverity": "Medium",
       "Automated": "Yes",
       "MethodName": "CheckJobAuthZScope",
       "Rationale": "If pipelines use project collection level tokens, a vulnerability in components used by one project can be leveraged by an attacker to attack all other projects. This is also in keeping with the principle of least privilege.",
-      "Recommendation": "Go to Project Settings --> Pipelines --> Settings --> Enable 'Limit job authorization scope to current project.'.",
+      "Recommendation": "Go to Project Settings --> Pipelines --> Settings --> Enable 'Limit job authorization scope to current project for non-release pipelines.'.",
+      "Tags": [
+        "SDL",
+        "TCP",
+        "Automated",
+        "AuthZ"
+      ],
+      "Enabled": true
+    },
+    {
+      "ControlID": "AzureDevOps_Project_AuthZ_Limit_Job_Authorization_Scope_To_Referenced_ADO_Repos",
+      "Description": "Do not allow Pipelines access any Azure DevOps repositories.",
+      "Id": "Project162",
+      "ControlSeverity": "Medium",
+      "Automated": "Yes",
+      "MethodName": "CheckScopeToDevOpsRepo",
+      "Rationale": "Pipelines can access any Azure DevOps repositories in authorized projects unless this option is enabled. With this option enabled, you can reduce the scope of access for all pipelines to only Azure DevOps repositories explicitly referenced by the pipeline.",
+      "Recommendation": "Go to Project Settings --> Pipelines --> Settings --> Enable 'Limit job authorization scope to referenced Azure DevOps repositorie'.",
       "Tags": [
         "SDL",
         "TCP",
