--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -490,7 +490,12 @@
       "Low": 90
     }
   },
-
+  "AttestationTrimIntervalDays":{
+    "Days" : 30
+  },
+  "PurgeAttestationbackupAfterDays":{
+    "Days" : 90
+  },
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
     "ASCTier": ["Standard"],
