Changes for ASC Security Contact

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -551,6 +551,7 @@
   "PublicIpAddress": {
     "EnablePublicIpResource": false
    },
+  "SeverityForSecContactAlerts": ["Medium","Low"],
   "MaxResourceInventoryObjectsCount": 20000,
   "AlernateAccountRegularExpressionForOrg": "",
   "GenerateSecurityEvaluationJsonFile": false
