Continuous Assurance changes

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -63,6 +63,9 @@
     "ResourceTrackerValidforDays": 3,
     "StoreResourceTrackerLocally": "True"
   },
+  "DockerImage":{
+    "ImageName" : "azsktest01/adosecurityscan"
+  },
   "AllowAttestationResourceType": [
     "Organization",
     "Project",
