--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -12,17 +12,19 @@
           "AzureDevOps_Organization_AuthZ_Review_Extension_Managers",
           "AzureDevOps_Organization_AuthZ_Review_Project_Collection_Service_Accounts",
           "AzureDevOps_Organization_SI_Review_Auto_Injected_Extensions",
-          "AzureDevOps_Organization_AuthZ_Limit_Job_Authorization_Scope_To_Current_Project_Non_Release_Pipeline",
+          "AzureDevOps_Organization_AuthZ_Limit_Non_Release_Scope_To_Current_Project",
+          "AzureDevOps_Organization_AuthZ_Limit_Job_Scope_To_Referenced_ADO_Repos",
           "AzureDevOps_Organization_DP_Dont_Allow_Public_Projects",
-          "AzureDevOps_Organization_AuthZ_Min_Admin_Count"
+          "AzureDevOps_Organization_AuthZ_Min_Admin_Count"          
         ]
       },
       {
         "ResourceType": "Project",
         "ControlIds": [
           "AzureDevOps_Project_AuthZ_Set_Visibility_Private_Or_Enterprise",
-          "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Current_Project_Non_Release_Pipeline",
-          "AzureDevOps_Project_AuthZ_Min_Admin_Count"
+          "AzureDevOps_Project_AuthZ_Min_Admin_Count",
+          "AzureDevOps_Project_AuthZ_Limit_Non_Release_Scope_To_Current_Project",
+          "AzureDevOps_Project_AuthZ_Limit_Job_Scope_To_Referenced_ADO_Repos"
         ]
       },
       {
@@ -31,7 +33,9 @@
           "AzureDevOps_ServiceConnection_AuthZ_Dont_Use_Classic_Connections",
           "AzureDevOps_ServiceConnection_AuthZ_Disable_Inherited_Permissions",
           "AzureDevOps_ServiceConnection_AuthZ_Dont_Grant_All_Pipelines_Access",
-          "AzureDevOps_ServiceConnection_AuthZ_Dont_Allow_Global_Groups"
+          "AzureDevOps_ServiceConnection_AuthZ_Dont_Allow_Global_Groups",
+          "AzureDevOps_ServiceConnection_SI_Review_Inactive_Connection",
+          "AzureDevOps_ServiceConnection_SI_Dont_Allow_Cross_Project_Sharing"
         ]
       },
       {
@@ -51,7 +55,8 @@
         "ResourceType": "AgentPool",
         "ControlIds": [
           "AzureDevOps_AgentPool_AuthZ_Disable_Inherited_Permissions",
-          "AzureDevOps_AgentPool_AuthZ_Project_Dont_Grant_All_Pipeline_Access"
+          "AzureDevOps_AgentPool_AuthZ_Project_Dont_Grant_All_Pipeline_Access",
+          "AzureDevOps_AgentPool_SI_Review_Inactive_AgentPool"
         ]
       }
     ]
@@ -156,6 +161,9 @@
       "Pre-Prod"
     ]
   },
+  "AgentPool": {
+    "AgentPoolHistoryPeriodInDays": 180
+  },
   "Organization": {
     "InActiveUserActivityLogsPeriodInDays": 90,
     "TopInActiveUserCount": 500,
@@ -176,6 +184,7 @@
     "MinPAMembersPermissible": 2
   },
   "ServiceConnection": {
+    "ServiceConnectionHistoryPeriodInDays": 180,
     "WhitelistedGroupIdentities": [
       "Endpoint Administrators"
     ],
