updated docker image

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -75,7 +75,7 @@
     "StoreResourceTrackerLocally": "True"
   },
   "DockerImage":{
-    "ImageName" : "azsktest01/adosecurityscan"
+    "ImageName" : "azskado/adosecurityscan"
   },
   "AllowAttestationResourceType": [
     "Organization",
